--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@
 
 .header__link {
   color: #2f80ed;
-  text-decoration: none;;
+  text-decoration: none;
 }
 
 .header__main-illustration {
@@ -93,7 +93,7 @@
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  color:#2f80ed;  
+  color:#2f80ed;
   width: 175px;
   margin: 0;
 }
