--- a/styles/style.css
+++ b/styles/style.css
@@ -128,6 +128,7 @@
   font-weight: 600;
   width: 60%;
   text-align: center;
+  margin: 0;
 }
 
 .digits__section-title {
@@ -140,6 +141,7 @@
   width: 60%;
   font-weight: normal;
   text-align: center;
+  margin: 0;
 }
 
 .digits__section-subtitle {
@@ -151,6 +153,9 @@
   width: 1100px;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin: 0;
+  list-style: none;
+  padding: 0;
 }
 
 .digits__table {
@@ -159,28 +164,21 @@
 
 .table__cell {
   width: 250px;
-  margin-top: 60px;
-
+  margin: 60px 0 0 0;
 }
 
-.heading {
+.table__heading {
+  margin: 0;
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
 }
 
-.table__heading {
-  margin: 0;
-}
-
-.text {
+.table__text {
+  margin: 20px 0 0 0;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-}
-
-.table__text {
-  margin: 20px 0 0 0;
 }
 /* Конец блока - digits */
 
@@ -188,7 +186,7 @@
 .feynman {
   background-color: #f2f2f2;
   position: relative;
-  height: 890px;
+  min-height: 890px;
   padding-top: 100px;
   display: flex;
   flex-direction: column;
@@ -237,7 +235,7 @@
 
 /* Блок - kayfman */
 .kaufman {
-  background-color: #000000;
+  background-color: #1f1f1f;
   position: relative;
   overflow: hidden;
   padding: 90px 0;
@@ -271,17 +269,15 @@
 
 .table__cell_theme_dark {
   width: 200px;
-  margin-right: 0;
-  margin-top: 80px;
-  color: white;
+  margin: 80px 0 0 0;
 }
 
 .table__heading_theme_dark {
-  margin: 0;
+  color: white;
 }
 
 .table__text_theme_dark {
-  margin: 20px 0 0 0;
+  color: white;
 }
 
 .kaufman__triangle {
@@ -299,7 +295,7 @@
 /* Блок - Footer */
 .footer {
   min-height: 350px;
-  background-color: #000;
+  background-color: #1f1f1f;
   color: white;
 }
 
@@ -316,10 +312,13 @@
   padding: 60px 0 40px 0;
 }
 
-.footer__column_content_copyright {
-  flex-basis: 711px;
+.footer__column {
   display: flex;
   flex-direction: column;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
   justify-content: space-between;
 }
 
@@ -331,8 +330,7 @@
 }
 
 .footer__column_content_info {
-  display: flex;
-  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .footer__column-heading {
@@ -361,8 +359,7 @@
 }
 
 .footer__column_content_social {
-  display: flex;
-  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .footer__social-icon {
